--- a/src/run.html
+++ b/src/run.html
@@ -7,6 +7,7 @@
   <title>ts-runtime Playground (run code)</title>
   <link rel="icon" href="assets/favicon.ico">
   <link rel="stylesheet" href="style.css?__VERSION__">
+  <script>window.tsp = window.tsp || {}</script>
 </head>
 
 <body>
@@ -30,52 +31,68 @@
   </div>
 
   <script>
-  var __getElement = __getElement || function __getElement() {
+  tsp.spread = tsp.spread || function spread(arg, start) {
+    var args = arg || [];
+    var spread = [];
+
+    for (var i = start || 0; i < args.length; i++) {
+      spread.push(args[i]);
+    }
+
+    return spread;
+  }
+
+  tsp.getElement = tsp.getElement || function getElement() {
     return document.getElementById('console-content');
   }
 
-  var __clearConsole = __clearConsole || function __clearConsole() {
-    __getElement().innerHTML = '';
+  tsp.clearConsole = tsp.clearConsole || function clearConsole() {
+    tsp.getElement().innerHTML = '';
   }
 
-  var __wrapConsoleText = __wrapConsoleText || function __wrapConsoleText(type, text) {
+  tsp.wrapConsoleText = tsp.wrapConsoleText || function wrapConsoleText(type, text) {
     return '<span class="log-'+type+'"><span class="icon-'+type+'"></span>'+text+'</span>';
   }
 
-  var __updateConsole = __updateConsole || function __updateConsole(type, message, ...optionalParams) {
-    var text = __logToText(message);
+  tsp.updateConsole = tsp.updateConsole || function updateConsole(type, message) {
+    var optionalParams = tsp.spread(arguments, 2);
+
+    var text = tsp.logToText(message);
 
     for (var param of optionalParams) {
-      text += '\n   ' + __logToText(param);
+      text += '\n   ' + tsp.logToText(param);
     }
 
-    text = __wrapConsoleText(type, text);
+    text = tsp.wrapConsoleText(type, text);
 
-    __getElement().innerHTML += text + '\n';
+    tsp.getElement().innerHTML += text + '\n';
   }
 
-  var __logToText = __logToText || function __logToText(message) {
+  tsp.logToText = tsp.logToText || function logToText(message) {
     if (typeof message === 'object' && message !== null) {
       return JSON.stringify(message);
     }
 
-    return __escape(message);
+    return tsp.escape(message);
   }
 
-  var __escape = __escape || function __escape(text) {
+  tsp.escape = tsp.escape || function escape(text) {
     var div = document.createElement('div');
     div.innerText = text;
     return div.innerHTML;
   }
 
-    var __log = __log || function __log(data) {
+  tsp.log = tsp.log || function log(data) {
     var message = data.data.message;
+    var type = data.type;
     var optionalParams = data.data.optionalParams;
-    if (data.log) data.log(message, ...optionalParams);
-    __updateConsole(data.type, message, ...optionalParams);
+    var params = optionalParams;
+    params.unshift(type, message);
+    if (data.log) data.log.apply(this, params);
+    tsp.updateConsole.apply(this, params);
   }
 
-  var __fadeOut = __fadeOut || function __fadeOut(target) {
+  tsp.fadeOut = tsp.fadeOut || function fadeOut(target) {
     target.style.opacity = '1';
 
     var fadeEffect = setInterval(() => {
@@ -89,12 +106,14 @@
     }, 5);
   }
 
-  var __originalLog = __originalLog || console.log;
-  console.log = function log(message, ...optionalParams) {
-    __log({
+  tsp.originalLog = tsp.originalLog || console.log;
+  console.log = function log(message) {
+    var optionalParams = tsp.spread(arguments, 1);
+
+    tsp.log({
       name: 'log',
       type: 'log',
-      log: __originalLog,
+      log: tsp.originalLog,
       data: {
         message,
         optionalParams
@@ -102,12 +121,14 @@
     });
   }
 
-  var __originalInfo = __originalInfo || console.info;
-  console.info = function info(message, ...optionalParams) {
-    __log({
+  tsp.originalInfo = tsp.originalInfo || console.info;
+  console.info = function info(message) {
+    var optionalParams = tsp.spread(arguments, 1);
+
+    tsp.log({
       name: 'log',
       type: 'info',
-      log: __originalInfo,
+      log: tsp.originalInfo,
       data: {
         message,
         optionalParams
@@ -115,12 +136,14 @@
     });
   }
 
-  var __originalWarn = __originalWarn || console.warn;
-  console.warn = function warn(message, ...optionalParams) {
-    __log({
+  tsp.originalWarn = tsp.originalWarn || console.warn;
+  console.warn = function warn(message) {
+    var optionalParams = tsp.spread(arguments, 1);
+
+    tsp.log({
       name: 'log',
       type: 'warn',
-      log: __originalWarn,
+      log: tsp.originalWarn,
       data: {
         message,
         optionalParams
@@ -128,12 +151,14 @@
     });
   }
 
-  var __originalError = __originalError || console.error;
-  console.error = function error(message, ...optionalParams) {
-    __log({
+  tsp.originalError = tsp.originalError || console.error;
+  console.error = function error(message) {
+    var optionalParams = tsp.spread(arguments, 1);
+
+    tsp.log({
       name: 'log',
       type: 'error',
-      log: __originalError,
+      log: tsp.originalError,
       data: {
         message,
         optionalParams
@@ -142,7 +167,7 @@
   }
 
   window.onerror = function(message, url, lineNumber) {
-    __log({
+    tsp.log({
       name: 'error',
       type: 'error',
       // log: __originalError,
@@ -159,7 +184,7 @@
     __CODE__
   })();
   </script>
-  <script>__fadeOut(document.getElementById('loading-window'));</script>
+  <script>tsp.fadeOut(document.getElementById('loading-window'));</script>
 </body>
 
 </html>
