--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf8">
-  <title>ts-runtime Playground</title>
+  <title>TypeScript Playground</title>
   <link rel="icon" href="assets/favicon.ico">
   <link rel="stylesheet" href="style.css?<!-- @echo VERSION -->">
 </head>
