--- a/src/run.html
+++ b/src/run.html
@@ -4,7 +4,7 @@
 <head>
   <base id="base" href="__BASE__">
   <meta charset="utf8">
-  <title>ts-runtime Playground (run code)</title>
+  <title>TypeScript Playground (run code)</title>
   <link rel="icon" href="assets/favicon.ico">
   <link rel="stylesheet" href="style.css?__VERSION__">
   <script>
