Fixed link title.

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
     </div>
     <div class="col-1-2">
       <div id="github">
-        <a href="https://github.com/fabiandev/typescript-playground" target="_blank" title="ts-runtime on GitHub">
+        <a href="https://github.com/fabiandev/typescript-playground" target="_blank" title="typescript-playground on GitHub">
             typescript-playground on <img id="ghlogo" src="assets/ghlogo.png" alt="GitHub Logo" border="0">
           </a>
       </div>
