--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
     </div>
   </div>
 
-  <script src="<!-- @echo MONACO_LOADER -->?<!-- @echo VERSION -->"></script>
+  <script src="<!-- @echo MONACO_LOADER -->"></script>
   <script src="<!-- @echo BUNDLE_NAME -->?<!-- @echo VERSION -->"></script>
 </body>
 
