Disable all UI options by default.

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
             preserveConstEnums
           </div>
           <div class="option">
-            <input class="compilerOption" type="checkbox" name="experimentalDecorators" value="true">
+            <input class="compilerOption" type="checkbox" name="experimentalDecorators" value="false">
             experimentalDecorators
           </div>
         </div>
