Display TypeScript version in the playground settings.

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,10 @@
         <a href="">TypeScript Playground</a>
         <span id="options-toggle" class="icon-cog"></span>
         <div id="options">
+          <div class="info">
+            TypeScript v<span id="ts-version"></span>
+          </div>
+
           <h6>Compiler Options:</h6>
           <div class="option">
             <select name="target" class="compilerOptions">
