Adjusted version query string.

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base id="base" href="">
   <title>TypeScript Playground</title>
   <link rel="icon" href="assets/favicon.ico">
-  <link rel="stylesheet" href="style.css?<!-- @echo VERSION -->">
+  <link rel="stylesheet" href="style.css?v=<!-- @echo VERSION -->">
 </head>
 
 <body>
@@ -115,8 +115,8 @@
     </div>
   </div>
 
-  <script src="<!-- @echo MONACO_LOADER -->"></script>
-  <script src="<!-- @echo BUNDLE_NAME -->?<!-- @echo VERSION -->"></script>
+  <script src="<!-- @echo MONACO_LOADER -->?v=<!-- @echo VERSION -->"></script>
+  <script src="<!-- @echo BUNDLE_NAME -->?v=<!-- @echo VERSION -->"></script>
 </body>
 
 </html>
