Add compiler options to ui

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,14 @@
             strictNullChecks
           </div>
           <div class="option">
+            <input class="compilerOptions" type="checkbox" name="strictFunctionTypes" value="true">
+            strictFunctionTypes
+          </div>
+          <div class="option">
+            <input class="compilerOptions" type="checkbox" name="strictPropertyInitialization" value="true">
+            strictPropertyInitialization
+          </div>
+          <div class="option">
             <input class="compilerOptions" type="checkbox" name="noImplicitReturns" value="true">
             noImplicitReturns
           </div>
