--- a/src/index.html
+++ b/src/index.html
@@ -33,11 +33,13 @@
           <h6>Compiler Options:</h6>
           <div class="option">
             <select name="target" class="compilerOptions">
+              <option value="0">ES3</option>
               <option value="1">ES5</option>
               <option value="2">ES2015</option>
               <option value="3">ES2016</option>
               <option value="4">ES2017</option>
-              <option value="5">ESNext</option>
+              <option value="5">ES2018</option>
+              <option value="6">ESNext</option>
             </select>
             target
           </div>
