Add force option to reset

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
             Sync Local Storage
           </div>
           <div class="info">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="" onclick="tsp.reset(true, event)">Reset and Reload</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="" onclick="tsp.reset(true, false, event)">Reset and Reload</a>
           </div>
 
           <h6>Run Window Options:</h6>
