--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         <span id="options-toggle" class="icon-cog"></span>
         <div id="options">
           <div class="info">
-            TypeScript v<span id="ts-version"></span>
+            TypeScript <span id="ts-version"></span>
           </div>
 
           <h6>Share</h6>
@@ -125,7 +125,6 @@
     </div>
   </div>
 
-  <script src="<!-- @echo MONACO_LOADER -->?v=<!-- @echo VERSION -->"></script>
   <script src="<!-- @echo BUNDLE_NAME -->?v=<!-- @echo VERSION -->"></script>
 </body>
 
