Add version selection to UI

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
   <div id="header" class="grid grid-pad">
     <div class="col-1-2">
       <div id="title">
-        <a href="">TypeScript Playground</a>
+        TypeScript Playground
+        <span id="ts-version-selector"></span>
         <span id="options-toggle" class="icon-cog"></span>
         <div id="options">
           <div class="info">
