--- a/src/run-console.html
+++ b/src/run-console.html
@@ -1,45 +1,43 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <base id="base" href="__BASE__" />
+    <meta charset="utf8" />
+    <title>TypeScript Playground (run code)</title>
+    <link rel="icon" href="assets/favicon.ico" />
+    <link rel="stylesheet" href="style.css?__VERSION__" />
+    <script>
+      window.tsp = window.tsp || {};
+    </script>
+  </head>
 
-<head>
-  <base id="base" href="__BASE__">
-  <meta charset="utf8">
-  <title>TypeScript Playground (run code)</title>
-  <link rel="icon" href="assets/favicon.ico">
-  <link rel="stylesheet" href="style.css?__VERSION__">
-  <script>
-    window.tsp = window.tsp || {}
-  </script>
-</head>
-
-<body id="run-window">
-  <div id="console" class="grid grid-pad">
-    <div class="col-1-1">
-      <div id="console-heading">
-        Console Output:
+  <body id="run-window">
+    <div id="console" class="grid grid-pad">
+      <div class="col-1-1">
+        <div id="console-heading">
+          Console Output:
+        </div>
+      </div>
+      <div class="col-1-1">
+        <div class="console" id="console-content"></div>
       </div>
     </div>
-    <div class="col-1-1">
-      <div class="console" id="console-content"></div>
+    <div id="loading-window">
+      <div class="spinner">
+        <div class="double-bounce1"></div>
+        <div class="double-bounce2"></div>
+      </div>
     </div>
-  </div>
-  <div id="loading-window">
-    <div class="spinner">
-      <div class="double-bounce1"></div>
-      <div class="double-bounce2"></div>
-    </div>
-  </div>
 
-  <script src="run.js?__VERSION__"></script>
+    <script src="run.js?__VERSION__"></script>
 
-  <script id="code">
-    (function() {
-      __CODE__
-    })();
-  </script>
-  <script>
-    tsp.fadeOut(document.getElementById('loading-window'));
-  </script>
-</body>
-
+    <script id="code">
+      (function () {
+        __CODE__;
+      })();
+    </script>
+    <script>
+      tsp.fadeOut(document.getElementById("loading-window"));
+    </script>
+  </body>
 </html>
