--- a/src/run-plain.html
+++ b/src/run-plain.html
@@ -1,16 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf8" />
+    <title>TypeScript Playground (run code)</title>
+    <link rel="icon" href="__BASE__/assets/favicon.ico" />
+  </head>
 
-<head>
-  <meta charset="utf8">
-  <title>TypeScript Playground (run code)</title>
-  <link rel="icon" href="__BASE__/assets/favicon.ico">
-</head>
-
-<body>
-  <script>
-    __CODE__
-  </script>
-</body>
-
+  <body>
+    <script>
+      __CODE__;
+    </script>
+  </body>
 </html>
